Dark mode fixes

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -612,6 +612,10 @@ summary {
   padding: 0.5em;*/
 }
 
+.dark-mode {
+    color:rgb(62, 183, 240);
+}
+
 details[open] {
   /*padding: 0.5em;*/
 }
